<resources>
    <string name="app_name">Дадзыбао</string>
    <string name="but_login">Войти</string>
    <string name="but_reg">Зарегистрироваться</string>
    <string name="hint_login">Логин</string>
    <string name="hint_pass">Пароль</string>
    <string name="hint_pass_rep">Повторите пароль</string>
    <string name="but_confirm">Подтвердить</string>

    <string name="succes_reg">Регистрация прошла успешно</string>
    <string name="error_reg">Ошибка</string>
    <string name="msg_auth_succ">Авторизация прошла успешно</string>
    <string name="msg_auth_err">Ошибка авторизации</string>
    <string name="msg_connection_err">Нет интернет-подключения</string>
    <string name="msg_difpsw_err">Пароли отличаются</string>
    <string name="msg_paswd_invalid_err">Пароль должен состоять из не менее чем 6 лат. символов и цифр</string>

    <string name="load_more">Загрузить еще</string>
    <string name="loading_posts">Загружаем</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="txt_create_new_idea">Создать новую идею</string>
    <string name="txt_enter_idea_content">Введите текст идеи</string>
    <string name="msg_err">Ошибка</string>
    <string name="msg_idea_created_success">Идея добавлена!</string>
    <string name="hint_idea_url">Введите URL</string>
    <string name="msg_already_voted">Вы уже отдали свой голос</string>
    <string name="msg_like_in_progress">Обработка голоса</string>
    <string name="hint_old_pswd">Введите старый пароль</string>
    <string name="notify">Notify</string>
    <string name="description_text">Description text</string>
    <string name="msg_push_token_failed">Пуш не был отправлен</string>
    <string name="msg_no_googleapi">Сервисы гуглапи не доступны</string>
    <string name="msg_err_cant_send_img">Не получается загрузить фото</string>
    <string name="msg_sucs_send_img">Изображение загружено</string>
    <string name="msg_err_content_att">Заполните текст идеи и прикрепите изображение</string>
    <string name="txt_sw_add_photo_gal">Добавить фото из галерии</string>
    <string name="msg_err_login_alrdy_exist">Пользователь с таким логином уже есть</string>
    <string name="txt_but_retry">Попробовать еще раз</string>
    <string name="txt_but_cancel">Отмена</string>
</resources>