<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:gravity="end"
        android:textAlignment="viewEnd"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_password"
        app:layout_constraintTop_toBottomOf="@id/mainTb"
        app:layout_constraintVertical_chainStyle="packed">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:inputType="text"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/but_login"
        app:layout_constraintTop_toBottomOf="@+id/ti_login"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:inputType="textPassword"
            android:maxLength="15" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/but_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        android:text="@string/but_login"
        app:layout_constraintBottom_toTopOf="@id/but_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password" />

    <Button
        android:id="@+id/but_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_login" />
</androidx.constraintlayout.widget.ConstraintLayout>