<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:gravity="end"
        android:textAlignment="viewEnd"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    </androidx.appcompat.widget.Toolbar>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_pswd"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTb"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_pswdr"
        app:layout_constraintTop_toBottomOf="@+id/ti_login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_pswdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass_rep"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/but_reg"
        app:layout_constraintTop_toBottomOf="@+id/ti_pswd"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pswdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/but_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_pswdr" />
</androidx.constraintlayout.widget.ConstraintLayout>