<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/avatarIv"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTb"
        app:srcCompat="@drawable/avatar_default" />

    <TextView
        android:id="@+id/authorNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/avatarIv"
        app:layout_constraintTop_toTopOf="@+id/avatarIv"
        android:text="Vadim" />

    <TextView
        android:id="@+id/rankTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"

        app:layout_constraintStart_toEndOf="@+id/avatarIv"
        app:layout_constraintTop_toBottomOf="@+id/authorNameTv"
        android:text="Hater" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/photoSw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_sw_add_photo_gal"

        app:layout_constraintEnd_toEndOf="@id/attachPhotoIv"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarIv"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/attachPhotoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/photoSw"
        app:layout_constraintTop_toBottomOf="@+id/avatarIv"
        app:srcCompat="@drawable/ic_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_old_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_old_pswd"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/photoSw"
        app:layout_constraintBottom_toTopOf="@+id/ti_pswd"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:inputType="textPassword"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:paddingBottom="8dp"

        app:layout_constraintBottom_toTopOf="@+id/ti_newPswd"
        app:layout_constraintTop_toBottomOf="@+id/ti_old_pswd"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:inputType="textPassword"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_newPswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass_rep"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_old_pswd"
        app:layout_constraintTop_toBottomOf="@+id/ti_pswd"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_Pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:inputType="textPassword"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/changesConfirmBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/but_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_newPswd" />



</androidx.constraintlayout.widget.ConstraintLayout>