<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewIdeaActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:gravity="end"
        android:textAlignment="viewEnd"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/createNewPostLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_create_new_idea"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTb" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentTil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/txt_enter_idea_content"
        app:layout_constraintBottom_toTopOf="@id/linkTil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createNewPostLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contentEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="8dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linkTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_idea_url"
        app:layout_constraintBottom_toTopOf="@id/attachPhotoIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTil">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/linkEdt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|top"
        android:inputType="textUri"
        android:padding="8dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/photoSw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_sw_add_photo_gal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkTil"
        app:layout_constraintEnd_toStartOf="@id/attachPhotoIv"
        android:layout_marginBottom="16dp"/>
    <ImageView
        android:id="@+id/attachPhotoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_add_photo"

        app:layout_constraintStart_toEndOf="@id/photoSw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkTil" />


    <Button
        android:id="@+id/createIdeaBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_create_new_idea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoSw"/>
</androidx.constraintlayout.widget.ConstraintLayout>